--- a/css/main.css
+++ b/css/main.css
@@ -1,10 +1,12 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto:400,700');
 
 :root{
-  --mainRed:#D93034;
+  --mainBlue:#40ACF1;
+  --transparentBlue:rgba(64, 172, 241,0.7);
   --mainWhite:#FFFFFF;
   --mainBlack:#292F36;
-  --mainGrey:#F6F6F6;
+  --mainGrey:rgb(216, 214, 214);
+  --mainYellow:#e3b505;
 }
 
 body{
@@ -12,14 +14,67 @@ body{
   color: var(--mainBlack);
   background: var(--mainWhite);
 }
+.section-title--special{
+  background: var(--transparentBlue);
+  color: var(--mainWhite);
+  padding: 0.5rem 2rem;
+  clip-path: polygon(10% 0, 100% 0,90% 100%,0 100%);
+}
+/* preloader */
+.preloader{
+position: fixed;
+top: 0;
+left: 0;
+bottom: 0;
+right: 0;
+z-index: 999;
+background: var(--mainWhite);
+/* display: none!important; */
+}
+.hidePreloader{
+  display: none!important;
+}
 
+/* end of preloader */
+/* navbar */
+.navbar{
+  background: var(--mainWhite);
+}
+.navbar-icon{
+  font-size: 2rem;
+  color: var(--mainBlue);
+  
+}
+.navbar-toggler{
+  outline-color: var(--mainBlue)!important;
+}
+.nav-link{
+  color: var(--mainBlack);
+  text-transform: capitalize;
+}
+.nav-link:hover{
+  color: var(--mainBlue);
+}
+.nav-icon{
+  font-size: 1.5rem;
+  color: var(--mainYellow);
+  text-decoration: none!important;
+  transition-property: color;
+  transition-duration: 0.5s;
+  transition-timing-function: ease-in-out;}
+.nav-icon:hover{
+  color: var(--mainBlack);
+}
+
+
+/* header */
 .header{
   overflow: hidden;
   clip-path: polygon(0 0,100% 0,100% 95%,50% 100%,0 95%);
   color: var(--mainWhite);
 }
 .height-60{
-  min-height: 100vh;
+  min-height: calc(100vh - 56px);
   background: linear-gradient(rgba(0,0,0,0.1),rgba(0,0,0,0.1)),url('../img/headerBcg.jpeg');
   background-position: center;
   background-size: cover;
@@ -44,7 +99,7 @@ animation-delay: 5s
 }
 .title-heading{
   background: rgba(0,0,0,0.4);
-  border-left: 0.3rem solid var(--mainRed);
+  border-left: 0.3rem solid var(--mainBlue);
 }
 .title{
   font-weight: 700;
@@ -56,25 +111,237 @@ animation-delay: 5s
   }
 }
 .title-icon{
-  color: var(--mainRed);
+  color: var(--mainBlue);
   text-decoration:none;
 }
 .title-icon:hover{
-  color: var(--mainRed);
+  color: var(--mainBlue);
   opacity: 0.6;
 }
 /* skills section */
 .skills-icon{
   font-size: 3rem;
-  color: var(--mainRed);
+  color: var(--mainYellow);
   background: var(--mainGrey);
 }
 .skills-icon:hover{
-  color: var(--mainRed);
+  color: var(--mainYellow);
 }
 .skills-underline{
   width: 4rem;
   height: 0.3rem;
-  background: var(--mainRed);
+  background: var(--mainBlue);
   margin: 1rem auto;
+}
+/* inventory */
+.inventory{
+  background: var(--mainGrey);
+}
+.car-card{
+  border-radius: 0!important;
+}
+.car-img{
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
+}
+.car-value{
+  background: var(--mainBlue);
+  color: var(--mainWhite);
+  clip-path: polygon(15% 0,85% 0,100% 100%,0 100%);
+  transition: all 1s ease-in-out;
+}
+.car-value:hover
+{
+  clip-path:polygon(0 0,100% 0,100% 100%,0 100%);
+}
+/* question */
+.question{
+  background: url('../img/questionBcg.jpeg')center/cover fixed no-repeat;
+}
+.question-yellow{
+  background: rgba(227, 181, 5,0.75)}
+.question-grey{
+  background: rgba(79, 109, 122,0.75);
+}
+.question-icon{
+  font-size: 4rem;
+  color: var(--mainBlue);
+  transition: all 0.5s ease-in-out;
+}
+.question-icon:hover{
+  transform: translateY(-10%);
+}
+.question-icon:hover{
+  color: var(--mainBlue)
+}
+.question-info{
+  color: var(--mainWhite);
+}
+/*end of question */
+/* featured cars */
+.featured{
+  background: var(--mainGrey);
+}
+.featured-item{
+  background: var(--mainWhite);
+  border-radius: 0.5rem;
+  opacity: 0.5;
+  transition: all 1s ease;
+  cursor: pointer;
+}
+.featured-item:hover{
+  opacity: 1;
+  transform: scale(1.05)
+}
+.featured-icon{
+  font-size: 1.5rem;
+  color: var(--mainYellow);
+  cursor: pointer; 
+  transition: 0.5s all ease-in-out;
+}
+.featured-icon:hover{
+  color: var(--mainBlue);
+}
+/* featured img */
+.img-container{
+  background: var(--mainBlue);
+  position: relative;
+  overflow: hidden;
+}
+.featured-photo{
+  transition: all 1s ease-in-out;
+}
+.img-container:hover .featured-photo{
+transform: scale(1.3);
+opacity: 0.5;
+}
+.featured-link{
+  font-size: 3rem;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  color: var(--mainBlack);
+  transition: all 1s ease-in-out;
+  opacity: 0;
+}
+.featured-link:hover{
+  color: var(--mainWhite);
+}
+.img-container:hover .featured-link{
+  opacity: 1;
+}
+/* contact*/
+.contact{
+  background:linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url('../img/headerBcg.jpeg')center/cover fixed no-repeat;
+}
+.contact-input{
+  font-size: 1.5rem;
+  text-transform: capitalize;
+  background: transparent;
+  border-color: var(--mainYellow);
+  color: var(--mainYellow)!important;
+  background: transparent;
+  
+}
+.contact-input::placeholder{
+  color:var(--mainYellow);
+}
+.contact-input:focus{
+  background: transparent;
+  border-color:var(--mainYellow);
+}
+
+.contact-btn{
+  text-transform: uppercase;
+  color: var(--mainYellow);
+  border-color: var(--mainYellow);
+}
+.contact-btn:hover{
+  background: var(--mainYellow);
+  color:var(--mainBlack);
+}
+
+
+/* services */
+.services{
+  position: relative;
+  min-height: 85vh;
+   max-width: 95vw;
+  margin: 0 auto;
+clip-path: polygon(0 10%,100% 0%,100% 90%,0 100%);
+
+}
+.video-container{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -3;
+}
+.video-item{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.video-overlay{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+background: var(--transparentBlue);
+z-index: -2;
+}
+.service{
+  background: var(--mainBlack);
+  color: var(--mainWhite);
+  transition: 1s all ease-in-out;
+}
+.service:hover{
+  background: var(--mainWhite);
+  color:var(--mainBlack);
+  padding-left: 2.2rem!important;
+}
+.service-icon{
+  font-size: 4rem;
+  color: var(--mainYellow);
+}
+/* customer  */
+
+.customer-card-body{
+margin-top: -4rem!important;
+color: var(--mainGrey);
+}
+
+.customer-img{
+  border:0.4rem solid var(--mainWhite);
+}
+
+.customer-name{
+  color: var(--mainBlue);
+  margin: 0.5rem;
+}
+
+.customer-icon{
+  font-size: 2rem;
+  color: var(--mainGrey);
+}
+.customer-quote{
+  max-width: 95%;
+}
+/* footer */
+.footer{
+  background: var(--mainBlack);
+
+}
+.footer-icon{
+  font-size: 1.5rem;
+  text-decoration: none;
+  color: var(--mainYellow);
+  transition: 1s ease-in-out;
+}
+.footer-icon:hover{
+  color: var(--mainBlue);
 }
