--- a/css/main.css
+++ b/css/main.css
@@ -57,7 +57,7 @@ background: var(--mainWhite);
 }
 .nav-icon{
   font-size: 1.5rem;
-  color: var(--mainYellow);
+  color: var(--mainBlue);
   text-decoration: none!important;
   transition-property: color;
   transition-duration: 0.5s;
@@ -230,6 +230,34 @@ opacity: 0.5;
 }
 .img-container:hover .featured-link{
   opacity: 1;
+}
+/* gallery */
+.gallery-item{
+  background: var(--mainYellow);
+  position: relative;
+  cursor: pointer;
+}
+.gallery-img{
+  transition: all 1s ease-in-out;
+}
+.gallery-item:hover .gallery-img{
+opacity: 0.5;
+}
+
+.gallery-item::after{
+  content: "";
+position: absolute;
+top: 0;
+left: 0;
+width: 100%;
+height: 100%;
+outline:6px solid var(--mainWhite);
+outline-offset: -2rem;
+transform: scale(0);
+transition: all 1s ease-in-out
+}
+.gallery-item:hover:after{
+  transform: scale(1)
 }
 /* contact*/
 .contact{
